--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 </head>
 <body>
    <main>
-        <!-- ========= header ============= -->
-        <header class="header">
+        <header class="fixed-header">
             <div class="content">
                 <nav class="navbar">
                     <!-- Logo -->
@@ -40,6 +39,12 @@
                         <a href="#!" class="btn action-btn">Sign up</a>
                     </div>
                 </nav>
+            </div>
+        </header>
+        <!-- ========= Hero ============= -->
+        <div class="hero-wrap">
+            <div class="content">
+                
 
                 <div class="hero">
                     <div class="info">
@@ -57,7 +62,7 @@
 
                 
             </div>
-        </header>
+        </div>
 
         <!-- ========== Clients ========== -->
         <div class="clients">
