--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-   <main>
+   <main id="home">
         <header class="fixed-header">
             <div class="content">
                 <nav class="navbar">
@@ -26,11 +26,11 @@
 
                     <!-- Navigation -->
                     <ul>
-                        <li><a href="#!">Home</a></li>
-                        <li><a href="#!">Feature</a></li>
-                        <li><a href="#!">Service</a></li>
-                        <li><a href="#!">Resource</a></li>
-                        <li><a href="#!">Contact</a></li>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#service">Service</a></li>
+                        <li><a href="#feature">Feature</a></li>
+                        <li><a href="#resource">Resource</a></li>
+                        <li><a href="#contact">Contact</a></li>
                     </ul>
                     
                     <!-- Action -->
@@ -107,7 +107,7 @@
         </div>
 
          <!-- ========== Guides ========== -->
-         <div class="guides">
+         <div class="guides" id="service">
             <div class="content">
                 <h2 class="sub-title">How its works?</h2>
                 <p class="desc">Everything you need to know when you're looking to buy, rent, or sell - all in one place.</p>
@@ -150,7 +150,7 @@
          </div>
 
           <!-- ========== Featured ========== -->
-          <div class="featured">
+          <div class="featured" id="feature">
             <div class="content">
                 <header>
                     <h2 class="sub-title">Featured Properties</h2>
@@ -239,7 +239,7 @@
           </div>
 
           <!-- ========== Stats ========== -->
-          <div class="stats">
+          <div class="stats" id="resource">
             <div class="content">
                 <div class="row">
                     <div class="img-block">
@@ -332,7 +332,7 @@
           </div>
 
            <!-- ========== Subscription ========== -->
-           <footer class="footer">
+           <footer class="footer" id="contact">
             <div class="content">
                 <div class="row row-top">
                     <!-- Product column -->
